--- a/node-server-project/package.json
+++ b/node-server-project/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9"
