--- a/node-server-project/package.json
+++ b/node-server-project/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.13.2",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.9"
   },
   "author": "",
